--- a/Cleaning.Rmd
+++ b/Cleaning.Rmd
@@ -34,7 +34,10 @@ games_clean <- games %>%
       HOME_TEAM_WINS == 0L ~ VISITOR_ABBREVIATION,
       TRUE                  ~ NA_character_   )) %>%
   select(-GAME_STATUS_TEXT) %>%
-  mutate(margin_winner = if_else(HOME_TEAM_WINS == 1L,
-                                 PTS_home - PTS_away,
-                                 PTS_away - PTS_home))
+  mutate(FG_diff  = FG_PCT_home - FG_PCT_away,
+    FT_diff  = FT_PCT_home - FT_PCT_away,
+    FG3_diff = FG3_PCT_home - FG3_PCT_away,
+    AST_diff = AST_home - AST_away,
+    REB_diff = REB_home - REB_away,
+    PTS_diff = PTS_home - PTS_away)
 ```
